For the -i option, don't convert a single space before a tab stop to a tab.  Fixes PR bin/5797 from Todd Vierling.